syntax = "proto3";
package Protocol;
//option optimize_for = LITE_RUNTIME;
option java_package = "com.cat.server.game.data.proto";
option java_outer_classname = "PBChat";

import "PBPlayer.proto";

//聊天
message PBChatInfo
{
   PBPlayerProfile profile = 1; 	//发送者简要信息
   string content = 2;				//聊天内容
   int64 sendTime = 3;				//发送时间
   PBPlayerProfile recvProfile = 4;	//接收者简要信息,私聊使用
}

//聊天请求
message ReqChat
{
   string content = 1;		//内容
   int32 channel = 2;		//频道
   int64 recvId = 3;		//接收者id
}

//响应聊天请求
message AckChat
{
	int32 channel = 1;		//频道： 0=世界, 1=系统；2=家族；3=好友；4=队伍
    repeated PBChatInfo chats = 2;
}